--- a/src/components/header/search-bar/styles.scss
+++ b/src/components/header/search-bar/styles.scss
@@ -3,7 +3,7 @@
     font-size: 16px;
     font-weight: 400;
     color: #333;
-    background-image: url(./../../assests/img/search-icon.svg);
+    background-image: url(./../../../assests/img/search-icon.svg);
     background-position: 16px;
     background-size: 16px;
     background-repeat: no-repeat;
