--- a/src/components/second-header/styles.scss
+++ b/src/components/second-header/styles.scss
@@ -1,95 +1,4 @@
-// .dropdown-custom {
-//       z-index: 100;
-//       position: relative;
-//       // display: inline-block;
-//       border-radius: 2px;
-//       border: solid 0.5px #262626;
-//       background-color: var(--white);
-    
-//       .Select-the-sample-data-set {
-//         cursor: default;
-//         display: inline-block;
-//         margin-top: 12px;
-//         margin-left: 18px;
-//         font-family: Montserrat;
-//         font-size: 11px;
-//         font-weight: bold;
-//         font-stretch: normal;
-//         font-style: normal;
-//         line-height: normal;
-//         letter-spacing: normal;
-//         text-align: left;
-//         color: #8b93c1;
-//       }
-//       .drop-down-img {
-//         // width: 342px;
-//         display: inline-block;
-//         float: right;
-//         margin-top: 8px;
-//         border-radius: 2px;
-//         padding-right: 17px;
-//       }
-//       .dropdown-custom-content {
-//         display: none;
-//         position: absolute;
-//         //   margin-top: 11px;
-//         background-color: #f9f9f9;
-//         //   min-width: 342px;
-//         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-//         z-index: 100;
-//         .dropdown-custom-item {
-//           cursor: pointer;
-//           height: 36px;
-//           margin: auto;
-//           position: relative;
-//           border: solid 0.5px #8a8a8a;
-//           border-top: none;
-//           background-color: var(--white);
-//           .dataset-main-name {
-//             display: inline-block;
-//             //   margin-top: 7px;
-//             margin-left: 18px;
-//             //   width: 250px;
-//             height: 23px;
-//             font-family: Montserrat;
-//             font-size: 11px;
-//             font-weight: bold;
-//             font-stretch: normal;
-//             font-style: normal;
-//             line-height: normal;
-//             letter-spacing: normal;
-//             text-align: left;
-//             color: #000a46;
-//             .dataset-name-2 {
-//               margin-top: 2px;
-//               font-size: 8px;
-//               color: #8f93ae;
-//             }
-//           }
-//           .view-dataset-img {
-//             display: inline-block;
-//             float: right;
-//             margin-top: 15px;
-//             border-radius: 2px;
-//             padding-right: 20px;
-//           }
-//         }
-//         .dropdown-custom-item:hover {
-//           background-color: #8a8a8a25;
-//         }
-//       }
-//     }
-//     .dropcheck {
-//       position: absolute;
-//       left: -9999px;
-//     }
-    
-//     // .dropcheck:checked ~ .dropdown-custom-content {
-//     //   // display: block;
-//     // }
-    
-
-//     .dropdown-custom:hover .dropdown-custom-content {
-//       display: block;
-//     }
-    
+.second-header{
+    margin-left: 0px !important;
+    margin-top: 10px !important;
+}
