--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
-  text-align: center;
-  padding-left: 40px;
-  padding-right: 40px;
+  /* text-align: center; */
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -37,4 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
