--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   /* text-align: center; */
-  padding-left: 30px;
-  padding-right: 30px;
+  /* padding-left: 30px;
+  padding-right: 30px; */
 }
 
 /* .App-logo {
