--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -2,27 +2,24 @@
   height: 130px;
   //   border: 2px solid green;
   margin: 0px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 40px;
+  padding-right: 40px;
   box-shadow: 0 1px 4px #a8a5a3;
 }
 .body-content {
-  margin-left: 65px;
-  margin-right: 65px;
-  background-color: goldenrod;
+  margin-left: 45px;
+  margin-right: 45px;
+  // background-color: goldenrod;
   align-items: center;
   flex-direction: column;
-  margin-top: 48px;
+  margin-top: 60px;
   overflow: hidden;
 }
 
 .showing-text {
   cursor: default;
-  background-repeat: no-repeat;
-  margin: 0;
   padding: 0;
   font-size: 22px;
-  line-height: normal;
   font-weight: 600;
   color: #1d1d1d;
 }
