--- a/src/components/body-content-right-side/one-item-show-div/styles.scss
+++ b/src/components/body-content-right-side/one-item-show-div/styles.scss
@@ -31,11 +31,6 @@
   background-color: rgba(128, 128, 128, 0.042);
 }
 
-.reviews-div {
-  width: 40%;
-  background-color: rgb(219, 223, 150);
-}
-
 .bottle-basic-details {
   margin-left: 15px;
   margin-top: 15px;
@@ -126,4 +121,109 @@
     line-height: 20px;
     font-weight: 400;
   }
+}
+
+.price-button {
+  border-radius: 80px !important;
+  border: 0 !important;
+  color: #fff !important;
+  background-color: #02a78b !important;
+  float: right;
+  margin-right: 20px;
+  margin-top: 15px;
+  height: 48px;
+  min-width: 128px;
+}
+.price-button:hover {
+  border: none;
+  background-color: #02a752 !important;
+}
+
+.reviews-div {
+  width: 40%;
+  // background-color: rgb(219, 223, 150);
+  // margin-top: 20px;
+  padding: 16px 24px 0;
+}
+
+.reviews-div:hover {
+  background-color: rgba(243, 227, 222, 0.419);
+}
+
+.user-rating-box {
+  margin-right: 4px;
+  display: inline-flex;
+  align-items: center !important;
+  background-color: #f9f7d6;
+  border-radius: 24px;
+  padding: 4px 8px;
+}
+
+.user-rating-star {
+  padding-bottom: auto !important;
+  padding-top: auto !important;
+  // border: 1px solid red;
+  font-size: 16px !important;
+}
+
+.user-rating-number {
+  font-size: 16px;
+  line-height: normal;
+  font-weight: 600;
+  color: #a26f01;
+  display: inline-block;
+  margin-left: 4px;
+}
+
+.reviews-inner-div {
+  // background-color: #484848;
+}
+
+.review-person-img {
+  border-radius: 80px !important;
+  // border: 1px solid red;
+  margin-left: 0px !important;
+}
+.review-info {
+  flex-direction: row;
+  align-items: center;
+  // padding: 8px 24px 16px;
+}
+.review-img-and-name {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.review-person-name {
+  margin-left: 10px;
+
+  text-align: left;
+  color: #8e041a;
+  font-size: 16px;
+  line-height: normal;
+  font-weight: 600;
+}
+
+.review-person-name:hover {
+  margin-left: 10px;
+  text-align: left;
+  color: #8e041a;
+  font-size: 16px;
+  line-height: normal;
+  font-weight: 600;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.review-date {
+  color: #a8a5a3;
+  margin-left: 10px;
+}
+
+.review-date:hover {
+  margin-left: 10px;
+  color: #a8a5a3;
+  text-decoration: underline;
+  cursor: pointer;
 }
