--- a/src/components/footer/second-footer/styles.scss
+++ b/src/components/footer/second-footer/styles.scss
@@ -1,76 +1,160 @@
-.second-footer-main-div {
-  padding: 32px 20px 35px 60px;
-  width: 100% !important;
-  background-color: #eae0da;
-  // background-color: grey;
-  color: #1e1e1e;
-  // border: 2px solid green;
+@media only screen and (min-width: 992px) {
+  .second-footer-main-div {
+    padding: 32px 20px 35px 60px;
+    width: 100% !important;
+    background-color: #eae0da;
+    // background-color: grey;
+    color: #1e1e1e;
+    // border: 2px solid green;
+  }
+
+  .payment-options-right {
+    margin-top: 8px;
+    justify-content: flex-end;
+    margin-top: 0;
+    flex-basis: auto;
+    float: right;
+  }
+
+  .image-show {
+    margin-right: 10px !important;
+  }
+
+  .payment-options-right-text {
+    text-align: right;
+    margin-top: 8px;
+    font-size: 12px;
+    font-weight: 400;
+    flex-basis: 100%;
+    margin-right: 10px;
+  }
+
+  .payment-options-left {
+    margin-top: 8px;
+    justify-content: flex-end;
+    flex-basis: auto;
+    float: left;
+  }
+
+  .sitemap {
+    margin-top: 10px;
+  }
+
+  .image-sitemap {
+    height: 35px;
+    margin-left: 10px;
+    width: 2%;
+  }
+
+  .sitemap-div {
+    width: 80% !important;
+    margin-left: 20px;
+  }
+  .sitemap-one-element {
+    margin-right: 24px;
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 8px;
+    color: #1e1e1e;
+    text-decoration: none;
+  }
+
+  .sitemap-one-element:hover {
+    margin-right: 24px;
+    font-size: 12px;
+    cursor: pointer;
+    font-weight: 400;
+    margin-bottom: 8px;
+    color: #1e1e1e;
+    text-decoration: none;
+  }
+
+  .social-media-icons {
+    width: 10%;
+    margin-top: 8px;
+    justify-content: flex-end;
+    float: right;
+  }
 }
 
-.payment-options-right {
-  margin-top: 8px;
-  justify-content: flex-end;
-  margin-top: 0;
-  flex-basis: auto;
-  float: right;
-}
+@media only screen and (max-width: 600px) {
+  .second-footer-main-div {
+    padding: 32px 20px 100px 60px;
+    width: 100% !important;
+    background-color: #eae0da;
+    // background-color: grey;
+    color: #1e1e1e;
+    // border: 2px solid green;
+  }
 
-.image-show {
-  margin-right: 10px !important;
-}
+  .payment-options-right {
+    margin-top: 8px;
+    justify-content: flex-end;
+    margin-top: 0;
+    flex-basis: auto;
+    float: right;
+    position: absolute;
+    top: -150px;
+  }
 
-.payment-options-right-text {
-  text-align: right;
-  margin-top: 8px;
-  font-size: 12px;
-  font-weight: 400;
-  flex-basis: 100%;
-  margin-right: 10px;
-}
+  .image-show {
+    margin-right: 10px !important;
+  }
 
-.payment-options-left {
-  margin-top: 8px;
-  justify-content: flex-end;
-  flex-basis: auto;
-  float: left;
-}
+  .payment-options-right-text {
+    text-align: center;
+    margin-top: 8px;
+    font-size: 12px;
+    font-weight: 400;
+    flex-basis: 100%;
+    margin-right: 10px;
+  }
 
-.sitemap {
-  margin-top: 10px;
-}
+  .payment-options-left {
+    margin-top: 8px;
+    justify-content: flex-end;
+    flex-basis: auto;
+    float: left;
+    position: absolute;
+    top: 270px;
+    margin: auto;
+  }
 
-.image-sitemap {
-  height: 35px;
-  margin-left: 10px;
-  width: 2%;
-}
+  .sitemap {
+    margin-top: 10px;
+  }
 
-.sitemap-div {
-  width: 80% !important;
-  margin-left: 20px;
-}
-.sitemap-one-element {
-  margin-right: 24px;
-  font-size: 12px;
-  font-weight: 400;
-  margin-bottom: 8px;
-  color: #1e1e1e;
-  text-decoration: none;
-}
+  .image-sitemap {
+    height: 35px;
+    margin-left: 10px;
+    width: 2%;
+  }
 
-.sitemap-one-element:hover {
-  margin-right: 24px;
-  font-size: 12px;
-  cursor: pointer;
-  font-weight: 400;
-  margin-bottom: 8px;
-  color: #1e1e1e;
-  text-decoration: none;
-}
+  .sitemap-div {
+    width: 80% !important;
+    margin-left: 20px;
+    flex-grow: 2;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .sitemap-one-element {
+    display: block;
+    font-size: 12px;
+    line-height: normal;
+    font-weight: 600;
+    flex-basis: 50%;
+    margin-bottom: 16px;
+    padding-right: 16px;
+    text-decoration: none;
+    color: #1e1e1e;
+    color: #1e1e1e;
+    text-decoration: none;
+  }
 
-.social-media-icons {
-  width: 10%;
-  margin-top: 8px;
-  justify-content: flex-end;
-  float: right;
+  .social-media-icons {
+    width: 10%;
+    margin-top: 8px;
+    justify-content: flex-end;
+    float: right;
+  }
 }
