--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 992px) {
-  .vivino-logo {
+  .vivino-logo-lap-view {
     color: rgb(186, 22, 40) !important;
     font-size: 26px !important;
     line-height: 1.53846154 !important;
@@ -8,30 +8,126 @@
     letter-spacing: 0.04in;
     // margin-left: 40px;
   }
-  .navigationItem__navigationItem--3oq_b{
+  .navigationItem__navigationItem--3oq_b {
     position: relative;
     background-color: #fff;
     margin-right: 16px;
   }
 
-  .profile-img{
+  .profile-img {
     background-image: url(./../../assests/img/search-icon.svg);
   }
 
-  .cart-img{
+  .cart-img {
     height: 23px;
   }
-
+  .show-on-mobile {
+    display: none !important;
+  }
 }
 
 @media only screen and (max-width: 600px) {
+  .vivino-logo-lap-view {
+    display: none !important;
+  }
   .vivino-logo {
-    color: rgb(90, 186, 22) !important;
+    color: rgb(186, 22, 40) !important;
     font-size: 26px !important;
     line-height: 1.53846154 !important;
     font-weight: 700;
     font-family: "GraphikWeb", "Verdana", sans-serif;
     letter-spacing: 0.03in;
-    margin-left: 40px;
   }
+
+  .show-on-mobile {
+    display: block;
+  }
+
+  .cart-img {
+    height: 23px;
+  }
+  .navbar-button-custom {
+    border: none !important;
+  }
+  .navbar-collapse {
+    background-color: white;
+    z-index: 100;
+    padding: 5px;
+    padding-left: 30px !important;
+    margin-left: -20px !important;
+    margin-right: -20px !important;
+  }
+  .wine-img {
+    display: inline-block;
+    float: left;
+    border-radius: 2px;
+    padding-right: 10px;
+    height: 24px;
+  }
+  .dropdown-custom-title {
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    // font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #1d1d1d;
+    margin-bottom: 20px;
+
+    // border: 1px solid green;
+  }
+
+  .dropdown-custom-icon {
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    // font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #1d1d1d;
+    margin-bottom: 20px;
+    float: right;
+    margin-right: 10px;
+  }
+  .mobile-nev-item {
+    margin-left: 10px;
+  }
+
+  .header {
+    height: 130px;
+    margin: 0px;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    box-shadow: 0 1px 4px #a8a5a3;
+  }
+
+  // .second-nav {
+  //   height: 50px;
+  //   background-color: green;
+  // }
+  // .dropdown-custom-title {
+  //   cursor: pointer;
+  //   display: inline-block;
+  //   font-size: 16px;
+  //   // font-weight: bold;
+  //   font-stretch: normal;
+  //   font-style: normal;
+  //   line-height: normal;
+  //   letter-spacing: normal;
+  //   text-align: left;
+  //   color: #1d1d1d;
+  //   margin-bottom: 20px;
+
+  //   // border: 1px solid green;
+  // }
+
+  // .dropdown-custom-title:hover {
+  //   text-decoration: underline;
+  // }
 }
