--- a/src/components/second-header/pairings-nav/styles.scss
+++ b/src/components/second-header/pairings-nav/styles.scss
@@ -1,29 +1,127 @@
-.dropdown-custom {
-  z-index: 100;
-  position: relative;
-  // display: inline-block;
-  border-radius: 2px;
-  // border: solid 0.5px #262626;
-  width: 100px;
+@media only screen and (min-width: 992px) {
+  .dropdown-custom {
+    z-index: 100;
+    position: relative;
+    // display: inline-block;
+    border-radius: 2px;
+    // border: solid 0.5px #262626;
+    width: 100px;
 
-  .dropdown-custom-title {
-    cursor: pointer;
-    display: inline-block;
-    font-size: 16px;
-    // font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #1d1d1d;
-    margin-bottom: 20px;
-    // border: 1px solid green;
+    .dropdown-custom-title {
+      cursor: pointer;
+      display: inline-block;
+      font-size: 16px;
+      // font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: left;
+      color: #1d1d1d;
+      margin-bottom: 20px;
+      // border: 1px solid green;
+    }
+
+    .dropdown-custom-title:hover {
+      text-decoration: underline;
+    }
+    .pairing-img {
+      display: inline-block;
+      float: left;
+      // margin-top: 8px;
+      border-radius: 2px;
+      padding-right: 10px;
+      height: 24px;
+    }
+
+    .content-one-img {
+      display: inline-block;
+      float: left;
+      // margin-top: 8px;
+      border-radius: 2px;
+      padding-right: 10px;
+      height: 18px;
+    }
+
+    .dropdown-custom-content {
+      display: none;
+      width: 820px;
+      position: absolute;
+      background-color: white;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 100;
+
+      .pairing-raw {
+        margin: 20px 10px 20px 10px;
+        // border: 1px solid black;
+      }
+      .remove-margin {
+        margin: 0px !important;
+        padding: 0px !important;
+      }
+      .pairing-heading {
+        float: left !important;
+        display: flex;
+        font-weight: 800 !important;
+      }
+      .pairing-item {
+        float: left !important;
+        display: flex;
+        margin-bottom: 10px !important;
+      }
+      .pairing-heading:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+      .pairing-item:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
   }
 
-  .dropdown-custom-title:hover {
+  .dropdown-custom:hover .dropdown-custom-content {
+    display: block;
+  }
+
+  .browse-pairings {
+    font-size: 13px;
+    float: left;
+    margin-left: 20px;
+    margin-bottom: 10px;
+  }
+
+  .browse-pairings:hover {
     text-decoration: underline;
+    cursor: pointer;
+    color: rgb(186, 22, 40) !important;
   }
+}
+
+@media only screen and (max-width: 600px) {
+  .pairing-heading {
+    float: left !important;
+    display: flex;
+    font-weight: 800 !important;
+  }
+  .pairing-item {
+    float: left !important;
+    display: flex;
+    margin-bottom: 10px !important;
+    margin-left: 10px;
+    color: #a8a5a3 !important;
+  }
+  .pairing-heading:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: rgb(186, 22, 40) !important;
+  }
+  .pairing-item:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: #a8a5a3 !important;
+  }
+
   .pairing-img {
     display: inline-block;
     float: left;
@@ -32,7 +130,6 @@
     padding-right: 10px;
     height: 24px;
   }
-
   .content-one-img {
     display: inline-block;
     float: left;
@@ -41,57 +138,4 @@
     padding-right: 10px;
     height: 18px;
   }
-
-  .dropdown-custom-content {
-    display: none;
-    width:820px;
-    position: absolute;
-    background-color: white;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 100;
-
-    .pairing-raw {
-      margin: 20px 10px 20px 10px;
-      // border: 1px solid black;
-    }
-    .remove-margin {
-      margin: 0px !important;
-      padding: 0px !important;
-    }
-    .pairing-heading {
-      float: left !important;
-      display: flex;
-      font-weight: 800 !important;
-    }
-    .pairing-item {
-      float: left !important;
-      display: flex;
-      margin-bottom: 10px !important;
-    }
-    .pairing-heading:hover {
-      text-decoration: underline;
-      cursor: pointer;
-    }
-    .pairing-item:hover {
-      text-decoration: underline;
-      cursor: pointer;
-    }
-  }
-}
-
-.dropdown-custom:hover .dropdown-custom-content {
-  display: block;
-}
-
-.browse-pairings {
-  font-size: 13px;
-  float: left;
-  margin-left: 20px;
-  margin-bottom: 10px;
-}
-
-.browse-pairings:hover {
-  text-decoration: underline;
-  cursor: pointer;
-  color: rgb(186, 22, 40) !important;
 }
