--- a/src/components/second-header/wines-nav/styles.scss
+++ b/src/components/second-header/wines-nav/styles.scss
@@ -1,89 +1,116 @@
-.dropdown-custom {
-  z-index: 100;
-  position: relative;
-  // display: inline-block;
-  border-radius: 2px;
-  // border: solid 0.5px #262626;
-  width: 100px;
-
-  .dropdown-custom-title {
-    cursor: pointer;
-    display: inline-block;
-    font-size: 16px;
-    // font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #1d1d1d;
-    margin-bottom: 20px;
-
-    // border: 1px solid green;
-  }
-
-  .dropdown-custom-title:hover {
-    text-decoration: underline;
-  }
-  .wine-img {
-    display: inline-block;
-    float: left;
-    // margin-top: 8px;
-    border-radius: 2px;
-    padding-right: 10px;
-    height: 24px;
-  }
-
-  .dropdown-custom-content {
-    // display: none;
-    width:820px;
-    position: absolute;
-    background-color: white;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+@media only screen and (min-width: 992px) {
+  .dropdown-custom {
     z-index: 100;
+    position: relative;
+    // display: inline-block;
+    border-radius: 2px;
+    // border: solid 0.5px #262626;
+    width: 100px;
 
-    .wine-raw {
-      margin: 20px 10px 20px 10px;
-      // border: 1px solid black;
-    }
-    .remove-margin {
-      margin: 0px !important;
-      padding: 0px !important;
-    }
-    .wine-heading {
-      float: left !important;
-      display: flex;
-      font-weight: 800 !important;
-    }
-    .wine-item {
-      float: left !important;
-      display: flex;
-      margin-bottom: 10px !important;
-    }
-    .wine-heading:hover {
-      text-decoration: underline;
+    .dropdown-custom-title {
       cursor: pointer;
+      display: inline-block;
+      font-size: 16px;
+      // font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: left;
+      color: #1d1d1d;
+      margin-bottom: 20px;
+
+      // border: 1px solid green;
     }
-    .wine-item:hover {
+
+    .dropdown-custom-title:hover {
       text-decoration: underline;
-      cursor: pointer;
     }
+    .wine-img {
+      display: inline-block;
+      float: left;
+      // margin-top: 8px;
+      border-radius: 2px;
+      padding-right: 10px;
+      height: 24px;
+    }
+
+    .dropdown-custom-content {
+      // display: none;
+      width: 820px;
+      position: absolute;
+      background-color: white;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 100;
+
+      .wine-raw {
+        margin: 20px 10px 20px 10px;
+        // border: 1px solid black;
+      }
+      .remove-margin {
+        margin: 0px !important;
+        padding: 0px !important;
+      }
+      .wine-heading {
+        float: left !important;
+        display: flex;
+        font-weight: 800 !important;
+      }
+      .wine-item {
+        float: left !important;
+        display: flex;
+        margin-bottom: 10px !important;
+      }
+      .wine-heading:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+      .wine-item:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .dropdown-custom:hover .dropdown-custom-content {
+    display: block;
+  }
+
+  .browse-wines {
+    font-size: 13px;
+    float: left;
+    margin-left: 20px;
+    margin-bottom: 10px;
+  }
+
+  .browse-wines:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: rgb(186, 22, 40) !important;
   }
 }
 
-.dropdown-custom:hover .dropdown-custom-content {
-  display: block;
-}
-
-.browse-wines {
-  font-size: 13px;
-  float: left;
-  margin-left: 20px;
-  margin-bottom: 10px;
-}
-
-.browse-wines:hover {
-  text-decoration: underline;
-  cursor: pointer;
-  color: rgb(186, 22, 40) !important;
+@media only screen and (max-width: 600px) {
+  .wine-heading {
+    float: left !important;
+    display: flex;
+    font-weight: 800 !important;
+  }
+  .wine-item {
+    float: left !important;
+    display: flex;
+    margin-bottom: 10px !important;
+    margin-left: 10px;
+    color: #a8a5a3 !important;
+  }
+  .wine-heading:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: rgb(186, 22, 40) !important;
+  }
+  .wine-item:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: #a8a5a3 !important;
+  }
 }
