--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -1,25 +1,85 @@
-.header {
-  height: 130px;
-  //   border: 2px solid green;
-  margin: 0px;
-  padding-left: 40px;
-  padding-right: 40px;
-  box-shadow: 0 1px 4px #a8a5a3;
-}
-.body-content {
-  margin-left: 45px;
-  margin-right: 45px;
-  // background-color: goldenrod;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 60px;
-  overflow: hidden;
+@media only screen and (min-width: 992px) {
+  .header {
+    height: 130px;
+    //   border: 2px solid green;
+    margin: 0px;
+    padding-left: 40px;
+    padding-right: 40px;
+    box-shadow: 0 1px 4px #a8a5a3;
+  }
+  .body-content {
+    margin-left: 45px;
+    margin-right: 45px;
+    // background-color: goldenrod;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 60px;
+    overflow: hidden;
+  }
+
+  .showing-text {
+    cursor: default;
+    padding: 0;
+    font-size: 22px;
+    font-weight: 600;
+    color: #1d1d1d;
+  }
+  .second-nav {
+    display: none;
+  }
 }
 
-.showing-text {
-  cursor: default;
-  padding: 0;
-  font-size: 22px;
-  font-weight: 600;
-  color: #1d1d1d;
+@media only screen and (max-width: 600px) {
+  .header {
+    height: 150px;
+    //   border: 2px solid green;
+    // padding-left: 40px;
+    // padding-right: 40px;
+    box-shadow: 0 1px 4px #a8a5a3;
+  }
+
+  .second-nav button:first-child {
+    width: 50%;
+    // width: 50%;
+    border: none;
+
+    // border: 1px solid rgb(186, 22, 40) !important;
+    padding-top: 5px;
+    border-radius: 25px;
+    background-color: white;
+  }
+
+  .second-nav button:last-child {
+    width: 50%;
+    // flex-grow: 1;
+    // border: 1px solid rgb(186, 22, 40) !important;
+    border: none;
+    padding-top: 5px;
+    margin-left: 10px;
+    border-radius: 25px;
+    background-color: white;
+  }
+  .second-nav {
+    height: 50px;
+    border-top: 1px solid green;
+    padding-top: 10px;
+    display: flex;
+    position: relative;
+    width: 100%;
+    flex-grow: 1;
+    // margin: auto;
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+
+  .second-nav-image {
+    display: inline-block;
+    // float: c;
+    border-radius: 2px;
+    padding-right: 10px;
+    height: 24px;
+  }
+  .showing-text {
+    display: none;
+  }
 }
