--- a/src/components/body-content-left-side/search-bar-without-border/styles.scss
+++ b/src/components/body-content-left-side/search-bar-without-border/styles.scss
@@ -26,15 +26,30 @@
 }
 
 @media only screen and (max-width: 600px) {
-  //   .vivino-logo {
-  //     color: rgb(90, 186, 22) !important;
-  //     font-size: 26px !important;
-  //     line-height: 1.53846154 !important;
-  //     font-weight: 700;
-  //     font-family: "GraphikWeb", "Verdana", sans-serif;
-  //     letter-spacing: 0.03in;
-  //     margin-left: 40px;
-  //   }
+  .search-bar-for-filters {
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
+    background-image: url(./../../../assests/img/search-icon.svg);
+    background-position: 16px;
+    background-size: 16px;
+    background-repeat: no-repeat;
+    outline: none;
+    padding: 4px 0 4px 48px;
+    border: none;
+    transition: width 0.6s ease-in-out;
+    height: 40px;
+    background-color: #fff;
+    // border-radius: 32px;
+    width: 100%;
+  }
+
+  .search-div {
+    // border: 1px solid red !important;
+    margin-left: -15px;
+
+    // border: none;
+  }
   .search-bar {
     display: none;
   }
